<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="3dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_logradouro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/logradouro"
                    android:inputType="text"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/et_cpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/cpf"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/et_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/telefone"
                    android:inputType="number"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/et_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/rg"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/et_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/nome"
                    android:inputType="text"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/et_estado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/estado"
                    android:inputType="text"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/et_cep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/cep"
                    android:inputType="number"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/et_complemento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/complemento"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/et_cidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/cidade"
                    android:inputType="text"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/et_numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/numero"
                    android:inputType="number"
                    android:textSize="20dp" />
            </LinearLayout>
        </ScrollView>

        <ListView
            android:id="@+id/lv_dados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
